# dtcServer

./: .copilot-style.md  .copilotignore  .gitignore  BackupSettings.json  CMakeLists.linux.txt  CMakeLists.txt  CMakeLists.windows.txt  CMakeLists_test.txt  Dockerfile  Dockerfile.ci  Dockerfile.simple  Dockerfile.simple-test  Dockerfile.test  LICENSE  MERGE-CHECKLIST.md  README.md  SECURITY.md  backup.ps1  docker-compose.yml  migrate_all_coinbase.ps1  migrate_logging.ps1  pr-body.md  quick_test.bat  test_auth.sh  test_dtc_client.cpp  test_minimal.cpp  test_websocket_connection.cpp
.github/: FUNDING.yml  copilot-instructions.md  git_hub_discussion_coinbase_dtc_core_template_en.md
.github/workflows/: ci-cd.yml  ci.yml  release.yml
Ideas/: SC-Study-DiscordAlerts.cpp  cbpro-Coinbase-trading-api.md
Ideas/Kraken-etc/: kraken+coinbase+gemini.md
Ideas/Orderbook/: Ctrader.md
config/: logging.ini  logging_new.ini
dev-info/: .copilot-style.md  DOCKER.md  DOCKER_COMPLETE.md  DOCKER_SETUP_COMPLETE.md  PROJECT_STATUS_REPORT.md  PROJECT_STRUCTURE.md  README.md  SECRETS.md  TODO.md  TODO_gui_dom_candles_trades.md  WINDOWS_SETUP.md  coinbase.md  compile-helpers.md  docker-deployment-success.md  docker-info.md  git_hub_discussion_coinbase_dtc_core_template_de.md  git_hub_discussion_coinbase_dtc_core_template_en.md  setup-ssh.md  test-status-report.md
dev-info/DTC-Protocoll/: SC-DTC-Messages-and-Procedures.md
examples/: credentials_example.cpp  test_cdp_credentials.cpp
include/coinbase_dtc_core/core/auth/: jwt_auth.hpp
include/coinbase_dtc_core/core/dtc/: protocol.hpp
include/coinbase_dtc_core/core/http/: http_client.hpp
include/coinbase_dtc_core/core/server/: server.hpp
include/coinbase_dtc_core/core/test/: api_mock.hpp  test_config.hpp
include/coinbase_dtc_core/core/util/: advanced_log.hpp  log.hpp
include/coinbase_dtc_core/credentials/: cdp_credentials.hpp  credentials_manager.hpp
include/coinbase_dtc_core/dtc/: protocol.hpp
include/coinbase_dtc_core/exchanges/base/: exchange_feed.hpp
include/coinbase_dtc_core/exchanges/binance/: binance_feed.hpp
include/coinbase_dtc_core/exchanges/coinbase/: coinbase_feed.hpp  endpoint.hpp  rest_client.hpp  ssl_websocket_client.hpp  websocket_client.hpp
include/coinbase_dtc_core/exchanges/factory/: exchange_factory.hpp
include/coinbase_dtc_core/feed/: feed.hpp
include/coinbase_dtc_core/feed/coinbase/: feed.hpp  websocket_client.hpp
include/coinbase_dtc_core/http/: http_client.hpp
include/coinbase_dtc_core/server/: server.hpp  symbol_manager.hpp
include/coinbase_dtc_core/test/: api_mock.hpp  test_config.hpp
include/coinbase_dtc_core/util/: log.hpp
include/dtc_test_client/: test_client.hpp
secrets/: README.md  cdp_api_key.json.template  coinbase.h  coinbase.h.template
settings/: README.md  coinbase_settings.h
src/auth/: jwt_auth.cpp
src/coinbase_feed/: feed.cpp
src/coinbase_websocket/: websocket_client.cpp
src/core/auth/: jwt_auth.cpp
src/core/dtc/: protocol.cpp  protocol_backup.cpp
src/core/server/: main.cpp  main_minimal.cpp  main_stepwise.cpp  server.cpp  simple_tcp_test.cpp
src/core/test/: api_mock.cpp
src/core/util/: advanced_log.cpp  log.cpp
src/credentials/: cdp_credentials.cpp
src/dtc_protocol/: protocol.cpp
src/dtc_test_client/: CMakeLists.txt  dtc_gui_client.cpp  dtc_gui_client.hpp  dtc_gui_client_clean.cpp  main.cpp  main_gui.cpp  test_client.cpp
src/exchanges/base/: exchange_feed.cpp
src/exchanges/binance/: binance_feed.cpp
src/exchanges/coinbase/: coinbase_feed.cpp  rest_client.cpp  ssl_websocket_client.cpp  websocket_client.cpp  websocket_client_old.cpp
src/exchanges/factory/: exchange_factory.cpp
src/server/: main.cpp  server.cpp  symbol_manager.cpp
src/test/: api_mock.cpp
src/tests/: test_coinbase_account_info.cpp  test_coinbase_endpoints.cpp  test_dtc_console.cpp
src/util/: log.cpp
tests/: Dockerfile.test  decode_jwt.cpp  extract_permissions_token.cpp  extract_token.cpp  test-docker.ps1  test-docker.sh  test-integration.ps1  test-server.ps1  test_basic.cpp  test_dtc_client.cpp  test_dtc_protocol.cpp  test_environment.cpp  test_jwt_auth.cpp  test_jwt_debug.cpp  test_permissions.cpp  test_simple_auth.cpp  test_ssl_websocket.cpp  test_view_permissions.cpp  test_websocket_basic.cpp
tests/console/: test_market_data_response.cpp
tests/core/: test_basic.cpp
tests/core/dtc/: test_dtc_protocol.cpp
tests/core/server/: test_server.cpp
tests/core/util/: test_logger.cpp  test_logger_simple.cpp
tests/exchanges/: test_ssl_websocket_coinbase.cpp
tests/exchanges/coinbase/: test_advanced_trade_api.cpp  test_coinbase_feed.cpp  test_jwt_auth.cpp  test_jwt_debug.cpp  test_permissions.cpp
tests/integration/: extract_permissions_token.cpp  extract_token.cpp  test_dtc_integration.cpp  test_environment.cpp  test_multi_exchange.cpp
tools/: start_gui.cmd  start_server.cmd  start_server_debug.cmd
